# sdl3-mouse-test

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
